build(security): bug fix email image

--- a/src/main/resources/templates/emailRegistration.html
+++ b/src/main/resources/templates/emailRegistration.html
@@ -20,7 +20,7 @@
         <td style="text-align: -webkit-center">
             <a href="http://localhost:5173">
                 <img
-                        src="https://raw.githubusercontent.com/Srizza93/todo-spring-back/0ae9d55bb1008784bd73f16943ca8165fc6b5b8f/src/main/resources/static/images/check.jpg"
+                        src="https://github.com/Srizza93/todo-spring-back/blob/build/security/src/main/resources/static/images/check.jpg?raw=true"
                         alt="logo"
                         width="75"
                         height="75"
